[tool.poetry]
name = "sampleproject"
version = "0.1.0"
description = "Sample project"
authors = ["NovaHFly <mugiviska@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.code-quality.dependencies]
ruff = "^0.3.4"
mypy = "^1.9.0"

[tool.poetry.group.testing.dependencies]
pytest = "^8.1.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=src"]

[tool.mypy]
mypy_path = "src"
strict_optional = false
disable_error_code = "import-untyped"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
