[tool.poetry]
name = "http-spoon"
version = "0.1.0"
description = "A spoon to scrape websites"
authors = ["NovaHFly <mugiviska@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
cloup = "^3.0.5"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
tenacity = "^8.4.2"
pydantic = "^2.7.4"

[tool.poetry.group.code-quality.dependencies]
ruff = "^0.4.10"
mypy = "^1.10.1"

[tool.poetry.group.testing.dependencies]
pytest = "^8.2.2"

[tool.poetry.group.debug.dependencies]
icecream = "^2.1.3"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
mypy_path = "src"
strict_optional = false
disable_error_code = "import-untyped"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
